<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_exchanger"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rudolfs.exchangerapp.ExchangerFragment"
    tools:showIn="@layout/activity_exchanger">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exchanger_favorite_text"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"/>
        <ImageButton
            android:id="@+id/exchanger_btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/star_big_off"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exchanger_title_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_value_EUR"/>

        <EditText
            android:id="@+id/exchanger_input_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/exchanger_input_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exchanger_title_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency_value_USD"/>

        <EditText
            android:id="@+id/exchanger_input_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:hint="@string/exchanger_input_hint"/>
    </LinearLayout>
</LinearLayout>